break everything with rollup

--- a/demo/index.html
+++ b/demo/index.html
@@ -343,9 +343,9 @@ draw(0, 0, size, size);
         </div>
       </div>
 
-      <script src="/dist/app.bundle.js"></script>
+      <script src="../dist/tutorialmarkdown.min.js"></script>
       <script>
-        var TMD = new TutorialMarkdownPlayer({editorElement: document.querySelector('#code-area')});
+        var TMD = new TutorialMarkdown({editorElement: document.querySelector('#code-area')});
       </script>
   </body>
 </html>
